Layout bug fix for the mobile

--- a/app/assets/stylesheets/bootstrap-responsive.css
+++ b/app/assets/stylesheets/bootstrap-responsive.css
@@ -422,9 +422,11 @@
   .row-fluid .span6 {
     float: left;
     width: 49%;
+    margin-left: 2%;
+    *margin-left: 2%;    
   }
   .row-fluid .span6:first-child {
-    margin-right: 15px;
+    margin-right: 0px;
   }
   #status > div {
     margin-bottom: 20px;
@@ -437,6 +439,11 @@
     width: 45% !important;
     margin-left: 4%;
   }
+  .leaderboard .span4 .placement.well {
+    width: 92% !important;
+    margin-left: 0;
+  }
+
   .span4 .placement.well:nth-child(even) {
     margin-left: 0;
   }
@@ -593,6 +600,10 @@
   }
   .filter select {
     width: 92% !important;
+  }
+  .row-fluid [class*="span"] {
+    width: 100%;
+    margin-left: 0;
   }
   #status > div {
     width: 100% !important;
